# Crm_ChatBOT

./: .gitignore  Crawl_Links_extract markdown.py  README.md  csv_reactify.py  my_data.py  package-lock.json  project_plan.md  project_timesheet.txt  requirement.txt  requirements.txt
chatbot/backend/: README.md  constraints.txt  docker-compose.yml  pyproject.toml  req.txt  requirements-base.txt  requirements.txt
chatbot/backend/Admin/: admin.py  middleware.py  models.py  permissions.py  urls.py  views.py
chatbot/backend/api_docs copy/: Activate_Custom_Layout.md  Add_or_Update_Territories_of_a_User_150.md  Appointments_344.md  Appointments_345.md  Appointments_347.md  Appointments_Rescheduled_History_350.md  Appointments_Rescheduled_History_351.md  Appointments_Rescheduled_History_352.md  Assign_Territories_to_Records_79.md  Assignment_Rules_143.md  Associate_Email_with_a_Record_423.md  Associate_Users_with_Territory_77.md  Associated_User_Count_75.md  Associated_Users'_Count_in_User_Groups_118.md  Attachment_393.md  Attachment_395.md  Backed_up_Data_357.md  Backup_Details_355.md  Bulk_Invite_Status_159.md  Bulk_Invite_Users_158.md  Business_Hours_166.md  Business_Hours_167.md  Business_Hours_168.md  Cadences_135.md  Cancel_Scheduled_Data_Backup_359.md  Change_Owner_416.md  Change_User's_Status_162.md  Child_Territories_of_a_Territory_73.md  Clone_Scoring_Rule_88.md  Composite_Request_372.md  Contact_Roles_385.md  Contact_Roles_386.md  Contact_Roles_387.md  Contact_Roles_388.md  Convert_Lead_165.md  Create_Bulk_Read_job_367.md  Create_Custom_Module.md  (+199 more)
(+411 files in other folders)
